--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,9 +15,9 @@ debug = true
 [dependencies]
 adobe-cmap-parser = "0.3.3"
 encoding = "0.2.33"
-euclid = "0.20.5"
+euclid = "0.20"
 lopdf = "0.26"
-linked-hash-map = "=0.5.3"
-postscript = "0.11.1"
+linked-hash-map = "^0.5"
+postscript = "0.14.0"
 type1-encoding-parser = "0.1.0"
 unicode-normalization = "0.1.5"
